[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generative-diffusion"
version = "0.1.0"
description = "Toolkit modular en Python para modelos generativos basados en difusión"
authors = [{name = "Manuel MUñoz", email = "manuel.munnozb@estudiante.uam.es"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "torch==2.5.1",
  "torchvision==0.20.1",
  "numpy==2.0.2",
  "scipy==1.13.1",
  "matplotlib==3.9.4",
  "tqdm==4.67.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "black>=24.4",
  "ruff>=0.4",
  "isort>=5.13",
  "pipreqs",
  "build",
]

[tool.setuptools]
packages = ["generative_diffusion"]

# --- Formateadores y linter -------------------------------
[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F"]   # E: errores estilo, F: fallos lógicos
